sprint-estimator/src/objects/Sprint_Estimate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client Account associated with the estimate</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sprint Estimates</relationshipLabel>
    <relationshipName>Sprint_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>