sprint-estimator/src/objects/Sprint_Estimate__c/fields/Baseline_Throughput_Per_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Throughput_Per_Sprint__c</fullName>
    <formula>Sprint_Build_Days__c *  Resource_Throughput_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Throughput Per Sprint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>