sprint-estimator/src/objects/Sprint_Estimate__c/fields/Resource_Throughput_Sum__c.field-meta.xml
<CustomField>
    <fullName>Resource_Throughput_Sum__c</fullName>
    <label>Resource Throughput Sum</label>
    <summarizedField>Sprint_Resource__c.Calculated_Points_Per_Build_Day__c</summarizedField>
    <summaryForeignKey>Sprint_Resource__c.Sprint_Estimate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>